--- a/index.html
+++ b/index.html
@@ -3,17 +3,15 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover, maximum-scale=1, user-scalable=no">
-<title>MOB 3on3 Dodgeball – Square 512</title>
+<title>MOB 3on3 Dodgeball – Square 512 (fixed)</title>
 <style>
-  :root{
-    --ui:#0d0f12; --fg:#fff; --dim:#aab; --card:#1b1f27; --card2:#2b303b;
-  }
+  :root{ --ui:#0d0f12; --card:#1b1f27; --card2:#2b303b; }
   html,body{margin:0;height:100%;background:#000;color:#fff;font-family:system-ui,-apple-system,"Segoe UI",Roboto,"Hiragino Sans","Yu Gothic",sans-serif}
   #wrap{position:fixed;inset:0;display:flex;flex-direction:column;background:#000}
   #hudTop{flex:0 0 auto;display:flex;gap:8px;align-items:center;padding:8px 10px;background:var(--ui);font-size:14px}
   .pill{background:#161a22;padding:6px 10px;border-radius:999px}
   #stage{flex:1 1 auto;display:flex;justify-content:center;align-items:center;background:#000}
-  #cv{width:min(100vmin,100vw);height:min(100vmin,calc(100vh - 220px)); /* 512x512 内部、外側は正方形にスケーリング */
+  #cv{width:min(100vmin,100vw);height:min(100vmin,calc(100vh - 220px));
        display:block;image-rendering:pixelated;touch-action:none;background:#000}
   #hudBtm{flex:0 0 auto;display:flex;align-items:center;justify-content:space-between;padding:10px;background:var(--ui);gap:8px}
   .pad{position:relative;width:220px;height:140px}
@@ -67,27 +65,26 @@
   // ===== Load images =====
   const imgBG = new Image(); imgBG.src = 'DMH.png';
   const imgBall = new Image(); imgBall.src = 'ball.png';
-  const imgChar = new Image(); imgChar.src = 'DMY.png';
+  const imgChar = new Image(); imgChar.src = 'DMY1.png'; // ★変更
 
   // ===== Game constants =====
-  const SIZE = 512; // internal
   const court = { x:0, y:0, w:512, h:512 };
   const centerX = 256;
-  const groundTop = 80, groundBottom = 480; // 可動域（上下）
+  const groundTop = 80, groundBottom = 480;
   const leftBound  = 32, rightBound = 480;
 
   const coeff = {
-    techSpeed: 7.5,
-    powerSpeed: 12.0,
-    specialSpeed: 14.0,
+    techSpeed: 6.5,    // ★遅く
+    powerSpeed: 10.0,  // ★遅く
+    specialSpeed: 12.0,// ★控えめ
     techCost: 12,
     powerCost: 24,
-    catchWindowMs: 70,
+    catchWindowMs: 110,  // ★基礎許容幅UP
     recoverPerSec: 3,
     knockTech:[8,14],
     knockPower:[18,26],
     knockSpcl:[28,40],
-    gaugeTime: 700, // ms 片道
+    gaugeTime: 700,
   };
 
   // ===== Utility =====
@@ -100,13 +97,12 @@
     constructor(side, x, y, isHuman=false){
       this.side=side; this.x=x; this.y=y; this.w=32; this.h=32;
       this.vx=0; this.vy=0; this.isHuman=isHuman;
-      // ステ（スピード速め）
       this.stats = { Power:62, Tech:58, Speed:78, Stamina:70, Catch:55, HP:112, Focus:55, Stability:50 };
-      this.speed = 2.0 + this.stats.Speed*0.0125; // だいぶ速め
+      this.speed = 2.0 + this.stats.Speed*0.0125; // 速め
       this.maxHP = this.stats.HP; this.hp=this.maxHP;
       this.staminaMax = 100 + this.stats.Stamina*0.5;
       this.stamina = this.staminaMax; this.staRegen = coeff.recoverPerSec + this.stats.Stamina*0.03;
-      this.catchBonusMs = coeff.catchWindowMs + this.stats.Catch*0.3 + this.stats.Focus*0.2;
+      this.catchBonusMs = coeff.catchWindowMs + this.stats.Catch*0.3 + this.stats.Focus*0.2 + 40; // ★さらに甘く
       this.dead=false; this.fade=1; this.hurtTimer=0; this.cooldown=0;
       this.target=null; this.state='idle'; this.pickHint=0;
       this.specialLeft=2; this.aiNext=now()+rand(250,600);
@@ -118,8 +114,7 @@
     constructor(){
       this.x=centerX; this.y=(groundTop+groundBottom)/2;
       this.vx=0; this.vy=0; this.owner=null;
-      this.state='free'; // free / air / owned
-      this.lastThrowTime=0;
+      this.state='free'; this.lastThrowTime=0; this.lastChoice='power';
     }
   }
 
@@ -141,11 +136,12 @@
 
   // ===== State =====
   let last = now(), dt=0, timeLeft=120000, paused=false;
-  let menu = null; // {x,y, who, target}
-  let gauge = null; // {t0, who, target, choice, done, tapTime}
-  let catchHint = null; // {who, until}
+  let menu = null;     // {x,y, who, target}
+  let gauge = null;    // {t0, who, target, choice, done, tapTime}
+  let catchHint = null;// {who, until}
   let selectedEnemy = null;
   let extendTime = 30000;
+  let blinkT = 0; // 選択リング用点滅
 
   // ===== Input (D-Pad) =====
   const pad = document.getElementById('pad');
@@ -166,29 +162,27 @@
   };
   document.getElementById('btnCatch').onclick=()=>{ manualCatch(human); };
 
-  // Canvas taps（選択→メニュー／ゲージ停止）
+  // Canvas taps（選択 → メニュー／ゲージ停止）
   cv.addEventListener('pointerdown', (e)=>{
     const r=cv.getBoundingClientRect();
     const x=(e.clientX-r.left)/ (r.width/cv.width);
     const y=(e.clientY-r.top) / (r.height/cv.height);
 
-    // ゲージ中なら停止
+    // ゲージ停止
     if(gauge && !gauge.done){ gauge.tapTime=now(); gauge.done=true; return; }
 
-    // 2段階：まず敵を選択（当たりを広めに）
+    // 敵選択（当たり広め）
     const hit = pickEnemyAt(x,y, rightTeam);
     if(hit){
       selectedEnemy = hit;
       human.target = hit;
       human.pickHint = 600; // ms
-      toastMsg('選択済み：右下「投げる」でもOK');
       // 同じ敵をもう一度タップでメニュー
-      if(menu && menu.target===hit){ /* 既に開いてたら何もしない */ }
-      else { openMenuFor(human, hit); }
+      openMenuFor(human, hit);
       return;
     }
 
-    // メニュー内の選択（画面タップ位置で判定）
+    // メニュー選択（背景塗りをやめたため視界を妨げない）
     if(menu){
       const choice = angleToChoice(Math.atan2(y-menu.y, x-menu.x));
       if(choice==='sp' && human.specialLeft<=0){ toastMsg('必殺なし'); return; }
@@ -196,7 +190,7 @@
       menu=null; return;
     }
 
-    // 何も当たらなければ選択解除
+    // 何もなし → 解除
     selectedEnemy = null; human.target=null; menu=null;
   });
 
@@ -207,7 +201,6 @@
     for(const p of list){
       if(p.dead) continue;
       const r=p.rect();
-      // 当たり範囲を少し拡張
       const ex=6, ey=6;
       if(x>=r.x-ex && x<=r.x+r.w+ex && y>=r.y-ey && y<=r.y+r.h+ey){
         const d=Math.hypot(p.x-x,p.y-y);
@@ -218,14 +211,14 @@
   }
   function openMenuFor(who, target){
     if(!target||target.dead) return;
-    menu = {x: clamp(target.x, 72, court.w-72), y: target.y-48, who, target};
+    // ターゲットの少し上に、半径小さめ＆塗り無しの扇形
+    menu = {x: clamp(target.x, 72, court.w-72), y: target.y-64, who, target};
   }
   function angleToChoice(a){
-    // 右=必殺、上=テク、下=パワ
     const deg=a*180/Math.PI;
-    if(deg>-60 && deg<60) return 'sp';
-    if(deg>=60) return 'tech';
-    return 'power';
+    if(deg>-60 && deg<60) return 'sp';   // 右
+    if(deg>=60) return 'tech';           // 上
+    return 'power';                      // 下
   }
 
   // ===== Gauge / Throw =====
@@ -240,33 +233,30 @@
     gauge=null;
   }
   function doThrow(who, target, choice, perf){
-    // コスト・残数
     if(choice==='power'){ who.stamina -= coeff.powerCost * (1.0 - perf*0.3); }
     else if(choice==='tech'){ who.stamina -= coeff.techCost * (1.0 - perf*0.5); }
     else { who.specialLeft = Math.max(0, who.specialLeft-1); }
     who.stamina = clamp(who.stamina, 0, who.staminaMax);
     spEl.textContent = human.specialLeft;
 
-    // 速度
     const speed =
-      choice==='power' ? (9.0 + perf*(coeff.powerSpeed-9.0)) :
-      choice==='tech'  ? (6.0 + perf*(coeff.techSpeed-6.0)) :
-                         (11.0+ perf*(coeff.specialSpeed-11.0));
+      choice==='power' ? (8.0 + perf*(coeff.powerSpeed-8.0)) :
+      choice==='tech'  ? (5.5 + perf*(coeff.techSpeed-5.5)) :
+                         (10.0+ perf*(coeff.specialSpeed-10.0));
 
-    // 方向
     const dx=target.x - who.x, dy=target.y - who.y;
     const ang=Math.atan2(dy,dx);
     ball.x=who.x + Math.cos(ang)*18;
     ball.y=who.y + Math.sin(ang)*12;
     ball.vx=Math.cos(ang)*speed;
-    ball.vy=Math.sin(ang)*(speed*0.6);
-    ball.owner=who; ball.state='air'; ball.lastThrowTime=now();
+    ball.vy=Math.sin(ang)*(speed*0.55);
+    ball.owner=who; ball.state='air'; ball.lastThrowTime=now(); ball.lastChoice=choice;
     who.cooldown=220;
   }
 
   // ===== Catch =====
   function showCatchUI(p){
-    catchHint = {who:p, until: now()+450}; // 0.45s可視
+    catchHint = {who:p, until: now()+500}; // 0.5s可視
   }
   function manualCatch(p){
     if(!canAttemptCatch(p, ball)) return;
@@ -274,19 +264,16 @@
   }
   function canAttemptCatch(p, ball){
     if(p.dead) return false;
-    // 相手から飛来中かつ近距離
     if(ball.state!=='air') return false;
-    if(!ball.owner) return false;
-    if(ball.owner===p) return false;
+    if(!ball.owner || ball.owner===p) return false;
     const towardLeft = ball.vx<0;
     if(p.side==='L' && !towardLeft) return false;
     if(p.side==='R' && towardLeft) return false;
     const d=Math.hypot(p.x-ball.x, p.y-ball.y);
-    return d<64;
+    return d<72; // ★少し広く
   }
   function tryCatch(p){
-    // タイミング判定（ボール投擲からの経過でゆるく）
-    const center = 420; // ms
+    const center = 520; // ★少し遅めにズラす
     const elapsed = now()-ball.lastThrowTime;
     const diff = Math.abs(elapsed-center);
     const ok = diff < p.catchBonusMs;
@@ -295,7 +282,6 @@
       ball.owner=p; ball.state='owned'; ball.vx=ball.vy=0;
       toastMsg('キャッチ！');
     } else {
-      // 失敗演出だけ
       p.hurtTimer = 120;
     }
   }
@@ -321,7 +307,6 @@
   // ===== CPU =====
   function cpuThink(p){
     if(p.dead) return;
-    // 所有してたら攻撃
     if(ball.owner===p && p.cooldown<=0){
       const enemies = (p.side==='L'? rightTeam : leftTeam).filter(q=>!q.dead);
       if(!enemies.length) return;
@@ -331,23 +316,19 @@
       if(p.stamina>20 && Math.random()<0.6) choice='power';
       if(p.specialLeft>0 && Math.random()<0.2) choice='sp';
       startGauge(p,t,choice);
-      gauge.tapTime = gauge.t0 + coeff.gaugeTime*0.8; // AIはそこそこ良いタイミング
+      gauge.tapTime = gauge.t0 + coeff.gaugeTime*0.8;
       gauge.done=true; return;
     }
-    // それ以外：ボールへ/ポジション取り
     if(ball.state==='air' || (ball.state==='free')){
       const tx = clamp(ball.x + (p.side==='L'? -6:6), (p.side==='L'? leftBound : centerX+16), (p.side==='L'? centerX-16 : rightBound));
       const ty = clamp(ball.y, groundTop+20, groundBottom-8);
       moveTo(p, tx, ty, 0.7);
     }else{
-      // 味方保持時は広がる
-      const baseY = (p.side==='L'? 160:160) + (Math.random()*160-80);
+      const baseY = 160 + (Math.random()*160-80);
       moveTo(p, clamp(p.x, (p.side==='L'? leftBound+16 : centerX+16), (p.side==='L'? centerX-16 : rightBound-16)), clamp(baseY, groundTop+24, groundBottom-24), 0.4);
     }
-
-    // 近距離なら自動キャッチ試行
     if(canAttemptCatch(p, ball)){
-      if(Math.random()<0.08) tryCatch(p);
+      if(Math.random()<0.1) tryCatch(p);
       showCatchUI(p);
     }
   }
@@ -359,12 +340,8 @@
 
   // ===== Bounds（陣地制限） =====
   function clampInSide(p){
-    // 自陣のみ
-    if(p.side==='L'){
-      p.x = clamp(p.x, leftBound+16, centerX-16);
-    }else{
-      p.x = clamp(p.x, centerX+16, rightBound-16);
-    }
+    if(p.side==='L'){ p.x = clamp(p.x, leftBound+16, centerX-16); }
+    else { p.x = clamp(p.x, centerX+16, rightBound-16); }
     p.y = clamp(p.y, groundTop+16, groundBottom-8);
   }
 
@@ -398,7 +375,7 @@
     // Gauge
     if(gauge && gauge.done){ finishGauge(gauge); }
 
-    // CPU think
+    // CPU
     const tnow=now();
     for(const p of allPlayers){
       if(p.isHuman) continue;
@@ -409,32 +386,26 @@
     // Ball
     if(ball.state==='air'){
       ball.x += ball.vx; ball.y += ball.vy; ball.vy*=0.995;
-      // 壁反射少し
       if(ball.y<groundTop){ ball.y=groundTop; ball.vy*=-0.6; }
       if(ball.y>groundBottom){ ball.y=groundBottom; ball.vy*=-0.6; }
       if(ball.x<leftBound){ ball.x=leftBound; ball.vx*=-0.6; }
       if(ball.x>rightBound){ ball.x=rightBound; ball.vx*=-0.6; }
 
-      // キャッチ可視化（近づいたら）
       if(canAttemptCatch(human, ball)) showCatchUI(human);
 
-      // ヒット判定
       const enemies = (ball.owner && ball.owner.side==='L')? rightTeam : leftTeam;
       let victim=null;
       for(const e of enemies){
         if(e.dead) continue;
         const r=e.rect();
-        if(ball.x>=r.x && ball.x<=r.x+r.w && ball.y>=r.y && ball.y<=r.y+r.h){
-          victim=e; break;
-        }
+        if(ball.x>=r.x && ball.x<=r.x+r.w && ball.y>=r.y && ball.y<=r.y+r.h){ victim=e; break; }
       }
       if(victim){
-        onHit(victim, /*choice proxy*/ 'power', ball.owner||victim);
+        onHit(victim, ball.lastChoice||'power', ball.owner||victim);
         ball.state='free'; ball.owner=null; ball.vx=ball.vy=0;
       }
     }else if(ball.state==='free'){
       ball.vx*=0.98; ball.vy*=0.98; ball.x+=ball.vx; ball.y+=ball.vy;
-      // 0.15s後に最寄りが取得
       if(now()-ball.lastThrowTime>150){
         let best=null, bd=1e9;
         for(const p of allPlayers){ if(p.dead) continue; const d=Math.hypot(p.x-ball.x,p.y-ball.y); if(d<bd){bd=d; best=p;} }
@@ -463,18 +434,14 @@
 
   // ===== Render =====
   function draw(){
-    // 背景（DMH.png を全面にフィット）
-    if(imgBG.complete && imgBG.naturalWidth>0){
-      ctx.drawImage(imgBG, 0,0, cv.width, cv.height);
-    }else{
-      ctx.fillStyle='#063'; ctx.fillRect(0,0,cv.width,cv.height);
-    }
+    // 背景
+    if(imgBG.complete && imgBG.naturalWidth>0){ ctx.drawImage(imgBG, 0,0, cv.width, cv.height); }
+    else { ctx.fillStyle='#063'; ctx.fillRect(0,0,cv.width,cv.height); }
 
-    // コート枠＆センターライン（見やすさ用）
-    ctx.fillStyle="#ffffff55";
-    ctx.fillRect(centerX-1, groundTop, 2, groundBottom-groundTop);
+    // センターライン
+    ctx.fillStyle="#ffffff55"; ctx.fillRect(centerX-1, groundTop, 2, groundBottom-groundTop);
 
-    // プレイヤー（y昇順でZ）
+    // プレイヤー（y昇順）
     const list = allPlayers.slice().sort((a,b)=>a.y-b.y);
     for(const p of list){
       const r=p.rect();
@@ -493,39 +460,29 @@
         ctx.scale(flip,1);
         ctx.drawImage(imgChar, flip===1? -16 : -16, 0, 32,32);
       }else{
-        // ロード前はプレースホルダ
-        ctx.fillStyle = (p.side==='L')? '#ffd60a' : '#ffd60a';
-        ctx.fillRect(r.x, r.y, 32,32);
-        ctx.strokeStyle="#000"; ctx.strokeRect(r.x+0.5, r.y+0.5, 31,31);
+        ctx.fillStyle = '#ffd60a'; ctx.fillRect(r.x, r.y, 32,32); ctx.strokeStyle="#000"; ctx.strokeRect(r.x+0.5, r.y+0.5, 31,31);
       }
       ctx.restore();
 
-      // 選択表示
+      // 選択している敵の小さな赤点滅リング（キャラより少し小さく）
       if(p===selectedEnemy){
-        ctx.strokeStyle="#fff"; ctx.strokeRect(r.x-2, r.y-2, r.w+4, r.h+4);
-        if(human.pickHint>0){
-          ctx.fillStyle="#fff"; ctx.font="10px monospace"; ctx.textAlign="center";
-          ctx.fillText("タップ", p.x, r.y-10);
-        }
+        const radius = 14; // ★小さめ
+        blinkT += 0.08;
+        const alpha = 0.4 + 0.4*Math.sin(blinkT*10);
+        ctx.strokeStyle = `rgba(255,0,0,${alpha.toFixed(3)})`;
+        ctx.lineWidth = 3;
+        ctx.beginPath(); ctx.arc(p.x, p.y, radius, 0, Math.PI*2); ctx.stroke();
       }
     }
 
     // ボール
-    if(ball.state!=='owned'){
-      if(imgBall.complete && imgBall.naturalWidth>0){
-        ctx.drawImage(imgBall, Math.round(ball.x-8), Math.round(ball.y-8), 16,16);
-      }else{
-        ctx.fillStyle="#f90"; ctx.fillRect(ball.x-4, ball.y-4, 8,8);
-      }
-    }else if(ball.owner){
-      if(imgBall.complete && imgBall.naturalWidth>0){
-        ctx.drawImage(imgBall, Math.round(ball.x-8), Math.round(ball.y-8), 16,16);
-      }else{
-        ctx.fillStyle="#f90"; ctx.fillRect(ball.x-4, ball.y-4, 8,8);
-      }
+    if(imgBall.complete && imgBall.naturalWidth>0){
+      ctx.drawImage(imgBall, Math.round(ball.x-8), Math.round(ball.y-8), 16,16);
+    }else{
+      ctx.fillStyle="#f90"; ctx.fillRect(ball.x-4, ball.y-4, 8,8);
     }
 
-    // ラジアルメニュー
+    // ラジアルメニュー（塗り無し・半径縮小・細枠のみ）
     if(menu){ drawRadial(menu.x, menu.y, human.specialLeft>0); }
 
     // ゲージ
@@ -542,49 +499,46 @@
 
   function drawRadial(cx,cy, hasSP){
     ctx.save();
-    // ring
-    ctx.beginPath(); ctx.arc(cx,cy, 56, 0, Math.PI*2); ctx.fillStyle="rgba(16,20,28,.92)"; ctx.fill();
-    // sectors
+    const R=44; // ★小さく
+    // 背景塗りをやめ、外枠だけ
+    ctx.beginPath(); ctx.arc(cx,cy, R, 0, Math.PI*2); ctx.strokeStyle="rgba(255,255,255,.35)"; ctx.lineWidth=1.5; ctx.stroke();
+    // sectors（細枠）
     drawSector(cx,cy, -Math.PI/3, Math.PI/3, hasSP?"#fff":"#777", "必殺");
     drawSector(cx,cy,  Math.PI/3, Math.PI-0.02, "#9cf", "テク");
     drawSector(cx,cy, -Math.PI+0.02, -Math.PI/3, "#fc9", "パワ");
     ctx.restore();
   }
   function drawSector(cx,cy,a0,a1,col,label){
-    ctx.beginPath(); ctx.moveTo(cx,cy); ctx.arc(cx,cy, 52, a0,a1); ctx.closePath();
-    ctx.fillStyle=col+"cc"; ctx.fill();
-    const a=(a0+a1)/2; const rx=cx+Math.cos(a)*34, ry=cy+Math.sin(a)*34+4;
-    ctx.fillStyle="#000"; ctx.font="12px monospace"; ctx.textAlign="center"; ctx.fillText(label, rx, ry);
+    const r=40;
+    ctx.beginPath(); ctx.moveTo(cx,cy); ctx.arc(cx,cy, r, a0,a1); ctx.closePath();
+    ctx.strokeStyle=col; ctx.lineWidth=2; ctx.stroke(); // ★枠のみ
+    const a=(a0+a1)/2; const rx=cx+Math.cos(a)*30, ry=cy+Math.sin(a)*30+4;
+    ctx.fillStyle="#fff"; ctx.font="12px monospace"; ctx.textAlign="center"; ctx.fillText(label, rx, ry);
   }
 
   function drawGauge(g){
     const w=160,h=12; const x=clamp(g.who.x-w/2, 24, court.w-w-24), y=g.who.y-46;
     ctx.fillStyle="#000a"; ctx.fillRect(x-2,y-2,w+4,h+4);
     ctx.fillStyle="#222"; ctx.fillRect(x,y,w,h);
-    // zones
     ctx.fillStyle="#0f0"; ctx.fillRect(x+2,y+2, Math.floor(w*0.5)-2, h-4);
     ctx.fillStyle="#ff0"; ctx.fillRect(x+Math.floor(w*0.5),y+2, Math.floor(w*0.3), h-4);
     ctx.fillStyle="#f30"; ctx.fillRect(x+Math.floor(w*0.8),y+2, Math.floor(w*0.2)-2, h-4);
-    // cursor
     const t = clamp((now()-g.t0)/coeff.gaugeTime, 0, 1);
     const cur = Math.floor((w-6)*t);
     ctx.fillStyle="#fff"; ctx.fillRect(x+3+cur, y+1, 4, h-2);
-    // label
     ctx.fillStyle="#fff"; ctx.font="10px monospace"; ctx.textAlign="center";
     const lab = g.choice==='power'?'パワー':(g.choice==='tech'?'テク':'必殺'); ctx.fillText(lab, x+w/2, y-6);
   }
 
   // ===== Main loop =====
   function loop(){
-    const t=now(); dt=t-last; last=t;
-    step(dt);
+    const t=now(); const ms=t-last; last=t;
+    step(ms);
     draw();
-    if(human.pickHint>0) human.pickHint-=dt;
+    if(human.pickHint>0) human.pickHint-=ms;
     requestAnimationFrame(loop);
   }
   loop();
-
-  // ===== Victory check helper (unused separate) =====
 
 })();
 </script>
