--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport"
       content="width=device-width, initial-scale=1, viewport-fit=cover, maximum-scale=1, user-scalable=no">
-<title>MOB 3on3 Dodgeball – Square 512 (miss pickup & no-auto-repeat)</title>
+<title>MOB 3on3 Dodgeball – Square 512 (walls, ko-stop, tap-switch, free-pickup)</title>
 <style>
   :root{ --ui:#0d0f12; --card:#1b1f27; --card2:#2b303b; }
   html,body{ margin:0; height:100%; background:#000; color:#fff;
@@ -48,7 +48,7 @@
     <div class="pill">MOB 3on3（512）</div>
     <div class="pill">時間: <span id="time">120</span>s</div>
     <div class="pill">必殺: <span id="sp">2</span></div>
-    <div class="pill">操作：敵タップ→頭上メニュー→自分頭上ゲージをタップで止める</div>
+    <div class="pill">操作：敵タップ→メニュー→自分頭上ゲージをタップで止める／自陣キャラタップで操作切替</div>
   </div>
 
   <div id="stage">
@@ -96,7 +96,7 @@
   const imgChar = new Image(); imgChar.src = 'DMY1.png';
 
   // ===== Consts =====
-  const W=512,H=512, CX=256, TOP=80, BOT=480, LB=32, RB=480;
+  const W=512,H=512, CX=256, TOP=80, BOT=480, LB=32, RB=480; // ←ネオンの内側を壁とする
   const ANCHOR_UPDATE_MS = 300;
   const ASSIGN_UPDATE_MS = 400;
   const SEPARATION_MIN_D = 32;
@@ -149,7 +149,7 @@
     constructor(){
       this.x=CX; this.y=(TOP+BOT)/2; this.vx=0; this.vy=0;
       this.owner=null;          // owned中のみ所有者
-      this.throwerSide=null;    // 空中中は投げた側だけ保持
+      this.throwerSide=null;    // air中：投げた陣営
       this.state='free';        // 'free' | 'owned' | 'air'
       this.lastThrow=0; this.lastChoice='power';
       this.reserveId=null;
@@ -163,7 +163,7 @@
   const R=[new Player('R', RB-84, 200, false),
            new Player('R', RB-60, 150, false),
            new Player('R', RB-60, 300, false)];
-  const ALL=[...L,...R]; const human=L[0]; const ball=new Ball();
+  const ALL=[...L,...R]; let human=L[0]; const ball=new Ball();
 
   // ===== State =====
   let last=now(), paused=false, timeLeft=120000, extendTime=30000;
@@ -232,15 +232,35 @@
     const x=(e.clientX-r.left)/(r.width/cv.width);
     const y=(e.clientY-r.top)/(r.height/cv.height);
 
+    // 自陣キャラをタップ→操作切替（先に判定）
+    const ally = pickAllyAt(x,y,L);
+    if(ally){ setHuman(ally); closeMenu(); selectedEnemy=null; return; }
+
+    // ゲージ停止（往復）
     if(gauge && !gauge.done){ gauge.tap=now(); gauge.done=true; return; }
 
+    // 敵選択
     const hit = pickEnemyAt(x,y,R);
     if(hit){ selectedEnemy=hit; human.target=hit; openMenuAbove(hit); return; }
 
+    // 空白タップ
     closeMenu(); selectedEnemy=null; human.target=null;
   });
 
   // ===== Helpers =====
+  function setHuman(p){
+    for(const q of L) q.isHuman=false;
+    p.isHuman=true; human=p;
+    showToast('操作キャラ変更');
+  }
+  function pickAllyAt(x,y,list){
+    for(const p of list){
+      if(p.dead) continue;
+      const r=p.rect(); const ex=6,ey=6;
+      if(x>=r.x-ex && x<=r.x+r.w+ex && y>=r.y-ey && y<=r.y+r.h+ey) return p;
+    }
+    return null;
+  }
   function pickEnemyAt(x,y,list){
     let best=null,bd=1e9;
     for(const p of list){
@@ -251,7 +271,7 @@
   function openMenuAbove(enemy){
     const stage = document.getElementById('stage').getBoundingClientRect();
     const rect=cv.getBoundingClientRect();
-    headMenu.style.display='flex'; // 先に出して幅確定
+    headMenu.style.display='flex';
     const ex = (enemy.x/cv.width) * rect.width + rect.left;
     const ey = ((enemy.rect().y-10)/cv.height) * rect.height + rect.top;
     headMenu.style.left = (ex - stage.left - headMenu.offsetWidth/2) + 'px';
@@ -283,15 +303,13 @@
     const dx=target.x-who.x, dy=target.y-who.y, ang=Math.atan2(dy,dx);
     ball.x=who.x + Math.cos(ang)*18; ball.y=who.y + Math.sin(ang)*12;
     ball.vx=Math.cos(ang)*spd; ball.vy=Math.sin(ang)*(spd*0.55);
-    // ★空中中は所有者を外し、投げた側だけ記録
-    ball.owner=null;
+    ball.owner=null;                   // 空中中に所有者は置かない
     ball.throwerSide=who.side;
     ball.state='air';
     ball.lastThrow=now();
     ball.lastChoice=choice;
     ball.reserveId=null;
     who.cool=160;
-    // AIゲージは別管理（ここでは触らない）
   }
 
   // ===== Catch / Pickup =====
@@ -310,12 +328,13 @@
     if(ok){
       pickupBall(p,true); showToast('キャッチ！');
     }else{
-      // ★失敗：前にこぼす（進行方向へ弱く）
+      // 失敗：前にこぼす（進行方向へ弱く）→free
       const keepX = ball.vx, keepY = ball.vy;
       ball.vx = keepX*0.5; ball.vy = keepY*0.3;
       ball.x += keepX*0.2; ball.y += keepY*0.2;
       ball.owner=null; ball.state='free'; ball.lastThrow=now();
-      ball.reserveId=null; // この後、予約ロジックが拾う
+      ball.reserveId=null;
+      clampBall('free'); // 壁内に収める
       p.hurt=120;
     }
   }
@@ -328,18 +347,42 @@
   // ===== Damage / Knockback =====
   function onHit(def,choice,atk){
     let dmg=(choice==='power')?rand(26,34):(choice==='tech')?rand(18,24):rand(40,55);
-    dmg *= (1 + (atk.stats.Power||60)*0.004);
+    dmg *= (1 + (atk.stats?.Power??60)*0.004);
     let kb=(choice==='power')?rand(...coeff.knockPower):(choice==='tech')?rand(...coeff.knockTech):rand(...coeff.knockSpcl);
-    kb *= (1 - (def.stats.Stability||50)*0.008); kb=clamp(kb,4,42);
+    kb *= (1 - (def.stats?.Stability??50)*0.008); kb=clamp(kb,4,42);
     def.hp -= Math.round(dmg); def.hurt=140;
     def.vx += (atk.x<def.x?1:-1) * kb*0.09; def.vy += rand(-0.4,0.4);
+
+    // ★ヒット時：ボール処理（貫通防止）
+    ball.state='free'; ball.owner=null;
+    ball.vx*=0.7; ball.vy*=0.5;
+    clampBall('free');
+
     if(def.hp<=0){ def.hp=0; def.dead=true; def.fade=1; }
   }
 
-  // ===== Bounds =====
+  // ===== Bounds（プレイヤー） =====
   function clampSide(p){
     if(p.side==='L') p.x=clamp(p.x,LB+16,CX-16); else p.x=clamp(p.x,CX+16,RB-16);
     p.y=clamp(p.y,TOP+16,BOT-8);
+  }
+
+  // ===== Bounds（ボール：四方ネオン＝壁） =====
+  function clampBall(mode){
+    // mode: 'air'|'free'|'owned'（ownedは位置だけクランプ）
+    if(mode==='owned'){
+      ball.x = clamp(ball.x, LB+8, RB-8);
+      ball.y = clamp(ball.y, TOP+8, BOT-8);
+      return;
+    }
+    // 反発係数
+    const rx = (mode==='air')? -0.6 : -0.4;
+    const ry = (mode==='air')? -0.6 : -0.4;
+
+    if(ball.x<LB){ ball.x=LB; ball.vx*=rx; }
+    if(ball.x>RB){ ball.x=RB; ball.vx*=rx; }
+    if(ball.y<TOP){ ball.y=TOP; ball.vy*=ry; }
+    if(ball.y>BOT){ ball.y=BOT; ball.vy*=ry; }
   }
 
   // ===== Anchors（状況から3点を生成：固定役割なし） =====
@@ -403,7 +446,7 @@
   function cpuThink(p){
     if(p.dead) return;
 
-    // ★ 所有者のときだけ投球準備（air中は入らない＝連射防止）
+    // 所有者のときだけ投球準備（air中は入らない＝連射防止）
     if(ball.state==='owned' && ball.owner===p && p.cool<=0){
       if(!aiGauge){
         const delay = rand(400,900);
@@ -413,14 +456,17 @@
       return;
     }
 
-    // free回収（予約制）
+    // free回収（予約を入れつつ、誰でも拾える）
     if(ball.state==='free'){
+      // 予約がなければ付ける
       if(ball.reserveId==null){
         let best=null, bd=1e9;
         for(const q of ALL){ if(q.dead) continue; const d=dist(q.x,q.y,ball.x,ball.y); if(d<bd){bd=d; best=q;} }
         if(best) ball.reserveId = best;
       }
+      // 予約者は最優先で向かう
       if(ball.reserveId===p){ moveToward(p, ball.x, ball.y, 0.95, true); }
+      // ただし、距離が十分近いなら**誰でも**拾う（下のstepで包括実施）
       return;
     }
 
@@ -508,19 +554,10 @@
     // Ball physics
     if(ball.state==='air'){
       ball.x+=ball.vx; ball.y+=ball.vy; ball.vy*=0.995;
+      clampBall('air');
 
-      // 壁に当たったらfree化＆減速
-      let hitWall=false;
-      if(ball.y<TOP){ ball.y=TOP; ball.vy*=-0.5; }
-      if(ball.y>BOT){ ball.y=BOT; ball.vy*=-0.5; }
-      if(ball.x<LB){ ball.x=LB; ball.vx*=-0.5; hitWall=true; }
-      if(ball.x>RB){ ball.x=RB; ball.vx*=-0.5; hitWall=true; }
-      if(hitWall){ ball.state='free'; ball.lastThrow=tnow; }
-
-      // キャッチUI
       if(canAttemptCatch(human)) catchHint={who:human, until:tnow+480};
 
-      // 当たり（投げた側の反対チームに判定）
       const enemies=(ball.throwerSide==='L')? R : L;
       let hit=null;
       for(const e of enemies){
@@ -528,12 +565,11 @@
         if(ball.x>=r.x && ball.x<=r.x+r.w && ball.y>=r.y && ball.y<=r.y+r.h){ hit=e; break; }
       }
       if(hit){
-        // ヒット → 相手にダメージ、ボールはfree
         onHit(hit, ball.lastChoice||'power', {x:(ball.throwerSide==='L'? LB:RB), y:hit.y, stats:{Power:60}});
-        ball.state='free'; ball.owner=null; ball.vx=ball.vx*0.7; ball.vy=ball.vy*0.5; ball.lastThrow=tnow;
+        ball.lastThrow=tnow;
       }
 
-      // 長すぎる空中は強制free
+      // 長い空中 or 極端に遅い→free
       const speed=Math.hypot(ball.vx,ball.vy);
       if(speed<0.9 || (tnow - ball.lastThrow) > 1200){
         ball.state='free'; ball.lastThrow=tnow;
@@ -541,20 +577,24 @@
 
     }else if(ball.state==='free'){
       ball.vx*=0.98; ball.vy*=0.98; ball.x+=ball.vx; ball.y+=ball.vy;
-      // 予約者が近ければ拾う
+      clampBall('free');
+      // ★誰でも拾える：近い人がいれば即回収（予約者優先だが必須ではない）
       if(tnow-ball.lastThrow>PICKUP_DELAY_MS){
-        if(ball.reserveId && !ball.reserveId.dead && dist(ball.reserveId.x,ball.reserveId.y,ball.x,ball.y)<PICKUP_RADIUS){
-          pickupBall(ball.reserveId);
-        }else{
-          let best=null, bd=1e9;
-          for(const p of ALL){ if(p.dead) continue; const d=dist(p.x,p.y,ball.x,ball.y); if(d<bd){bd=d; best=p;} }
-          if(best && bd<PICKUP_RADIUS){ pickupBall(best); }
+        let picker=null, bd=1e9;
+        for(const p of ALL){
+          if(p.dead) continue;
+          const d=dist(p.x,p.y,ball.x,ball.y);
+          if(d<bd){ bd=d; picker=p; }
+          if(d < PICKUP_RADIUS){ picker=p; break; } // 早期確定
         }
+        if(picker && bd<PICKUP_RADIUS){ pickupBall(picker); }
       }
+
     }else if(ball.state==='owned'){
       if(ball.owner && !ball.owner.dead){
         const sgn=(ball.owner.side==='L')?1:-1;
         ball.x=ball.owner.x+10*sgn; ball.y=ball.owner.y-6;
+        clampBall('owned');
       }else{ ball.state='free'; ball.owner=null; }
     }
 
@@ -569,7 +609,10 @@
   function draw(){
     if(imgBG.complete && imgBG.naturalWidth>0) ctx.drawImage(imgBG,0,0,cv.width,cv.height);
     else { ctx.fillStyle='#063'; ctx.fillRect(0,0,cv.width,cv.height); }
+    // センター線
     ctx.fillStyle="#ffffff55"; ctx.fillRect(CX-1,TOP,2,BOT-TOP);
+    // 壁の可視化（ネオン枠の縁を薄く）
+    // （背景で描かれている想定なので省略。必要なら枠線を描画）
 
     const list=ALL.slice().sort((a,b)=>a.y-b.y);
     for(const p of list){
@@ -591,14 +634,11 @@
     if(imgBall.complete && imgBall.naturalWidth>0) ctx.drawImage(imgBall, Math.round(ball.x-8), Math.round(ball.y-8), 16,16);
     else { ctx.fillStyle="#f90"; ctx.fillRect(ball.x-4,ball.y-4,8,8); }
 
-    // 人間のゲージ（本人頭上）
     if(gauge){ drawGaugeAbove(gauge.who, gauge.choice, (now()-gauge.t0)/coeff.gaugeTime); }
 
-    // CPUのゲージ（本人頭上）
     if(aiGauge && aiGauge.who && ball.state==='owned' && ball.owner===aiGauge.who){
       const tRaw = (now() - aiGauge.t0)/coeff.gaugeTime;
       drawGaugeAbove(aiGauge.who, aiGauge.choice, Math.max(0, tRaw));
-      if(tRaw>0.6 && aiGauge.who.side!=='L'){ /* 任意の演出。必要なら人間側にCATCHヒントなど */ }
     }
   }
 
